--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 <style>
 
 .top-right {
@@ -12,11 +14,14 @@
 }
 #toobig {
 	left: 30px;
-    position: absolute;
     top: 2%;
     left: 1%;
     height: 8%;
     position: fixed;
+}
+#vis {
+  height: 800px;
+  width: 100%;
 }
 /* menu buttons */
 .dropbtn {
@@ -58,12 +63,40 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
+.about {
+  background-color: #041b26;
+  color: #a0293b;
+  padding: 10px;
+  font-size: 40px;
+  padding-top: 30px;
+  max-height: 300px;
+  min-height: 300px;
+  text-align: left;
+  padding-right: 200px;
+}
+.lies {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 35px;
+  background-color: #775660;
+  color: white;
+  padding: 15px;
+}
+.items {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+   list-style-type: none;
+   padding: 20px;
+   background-color: #a87987;
+   color: white;
+}
+li {
+  padding: 10px;
+}
 
 </style>
 </head>
 <body>
-<img src="https://vignette.wikia.nocookie.net/deathbattlefanon/images/e/ef/Yellow-Ranger-Trini-Kwan-Power-Rangers.jpg/revision/latest?cb=20160915023856">
 
 <a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
@@ -94,16 +127,18 @@
           </div>
       	</div>
       </div>
-      <p></br></br>The Yellow Ranger is almost always given to a character in the show.</br>
+  <div class="about"><p></br></br>The Yellow Ranger is almost always given to a character in the show.</br>
       They are maily a subordinate fighter and is the moral booster for the team. </br>
       These Rangers are usually female with an exception of four male characters</br>
       throughout the series. Contraaversy struck the Yellow Ranger when fans </br>
       wrote letters to the production company writing that having an asian charcter </br>
       play the Yellow Ranger was racist and demeaning. The Power Rangers series</br>
       didnt have an asian Yellow Ranger since Trini. THe Ranger often uses small</br>
-      weapons or flying objects such as daggers or shuriken.</p>
-        <ul><p>The list of the Yellow Ranger characters include</p>
-          <li>Trini Kwan</li>
+      weapons or flying objects such as daggers or shuriken.</p></div>
+  <img id="vis" src="https://vignette.wikia.nocookie.net/deathbattlefanon/images/e/ef/Yellow-Ranger-Trini-Kwan-Power-Rangers.jpg/revision/latest?cb=20160915023856">
+      <div class="lies"><ul><p>The list of the Yellow Ranger characters include</p></div>
+      <div class="items">
+        <li>Trini Kwan</li>
           <li>Tanya Sloan</li>
           <li>Ashley Hammond</li>
           <li>Ashley Hammond</li>
@@ -112,7 +147,8 @@
           <li>Lily Chilman</li>
           <li>Gia Moran</li>
           <li>Emily (Last Name Unknown)</li>
-        </ul>
+      </div>
+      </ul>
 
 </body>
 </html>
