--- a/PowerRangers(usable)/PinkPowerRanger.html
+++ b/PowerRangers(usable)/PinkPowerRanger.html
@@ -127,7 +127,7 @@ li {
           </div>
       	</div>
       </div>
-  <div class="about"><p> </br></br>The Pink Power Ranger is always given to one member on the Ranger</br>
+  <div class="about"><p>The Pink Power Ranger is always given to one member on the Ranger</br>
     Squad. They are typically always female and follow other Rangers' advice.</br>
     They are given the most straight-forward weapons such as generic swords or </br>
     lances. Whenever a Pink Ranger is introduced into the series, they are always</br>
