--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -136,7 +136,7 @@ li {
       didnt have an asian Yellow Ranger since Trini. THe Ranger often uses small</br>
       weapons or flying objects such as daggers or shuriken.</p></div>
   <img id="vis" src="https://vignette.wikia.nocookie.net/deathbattlefanon/images/e/ef/Yellow-Ranger-Trini-Kwan-Power-Rangers.jpg/revision/latest?cb=20160915023856">
-      <div class="lies"><ul><p>The list of the Yellow Ranger characters include</p></div>
+      <ul><div class="lies"><p>The list of the Yellow Ranger characters include</p></div>
       <div class="items">
         <li>Trini Kwan</li>
           <li>Tanya Sloan</li>
